--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,179 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Dashboard</title>
+  <meta charset="UTF-8">
+  <title>Contesto Admin Dashboard</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #0044cc, #00c2ff);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #0d47a1, #42a5f5); /* smooth blue gradient */
       color: white;
+      padding: 20px;
     }
-
-    .container {
-      background-color: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      border-radius: 16px;
-      padding: 30px;
-      width: 95%;
-      max-width: 1000px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-    }
-
     h1 {
-      color: #fff000;
-      margin-bottom: 20px;
       text-align: center;
     }
-
-    #searchInput {
-      width: 100%;
-      padding: 10px 15px;
+    .search-container {
+      text-align: center;
       margin-bottom: 20px;
-      border: none;
-      border-radius: 20px;
+    }
+    .search-container input {
+      padding: 8px;
+      width: 300px;
+      max-width: 80%;
       font-size: 16px;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
-      color: white;
+      margin-bottom: 20px;
+      background: rgba(255, 255, 255, 0.1);
     }
-th, td {
-  padding: 12px;
-  text-align: left;
-}
-
-tbody tr {
-  background-color: rgba(255, 255, 255, 0.05);
-  transition: background 0.3s ease;
-  border-radius: 10px;
-}
-
-tbody tr:hover {
-  background-color: rgba(255, 255, 255, 0.08);
-      }
-
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
     th {
-      color: #fff000;
+      background-color: rgba(255, 255, 255, 0.1);
     }
-
-    .delete-btn {
-      background-color: #ff4444;
-      border: none;
-      color: white;
-      padding: 8px 15px;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .delete-btn:hover {
-      background-color: #cc0000;
-    }
-
-    .footer {
-      margin-top: 20px;
-      font-size: 13px;
-      color: #eee;
+    .pagination {
       text-align: center;
+    }
+    .pagination button {
+      padding: 8px 12px;
+      margin: 0 5px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      background: #ffffff33;
+      color: white;
+    }
+    .pagination button.active {
+      font-weight: bold;
+      background: #ffffff55;
+    }
+    .delete-btn {
+      background: red;
+      color: white;
+      border: none;
+      padding: 6px 10px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Contestant Dashboard</h1>
+  <h1>Contesto Contestants</h1>
 
-    <input type="text" id="searchInput" placeholder="Search by username or phone number...">
-
-    <table id="contestantTable">
-      <thead>
-        <tr>
-          <th>Username</th>
-          <th>Phone Number</th>
-          <th>Date Registered</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Dynamic rows go here -->
-      </tbody>
-    </table>
+  <div class="search-container">
+    <input type="text" id="searchInput" placeholder="Search by username or phone..." onkeyup="renderTable()">
   </div>
 
-  <div class="footer">
-    &copy; 2025 Contesto. All rights reserved.
-  </div>
+  <table id="contestantTable">
+    <thead>
+      <tr>
+        <th>Username</th>
+        <th>Phone</th>
+        <th>Date Registered</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <div class="pagination" id="pagination"></div>
 
   <script>
-    const backendUrl = 'https://contesto.onrender.com';
+    const API_URL = "https://contesto.onrender.com/api/contestants"; // Adjust to actual endpoint if needed
+    let contestants = [];
+    const itemsPerPage = 12;
+    let currentPage = 1;
 
     async function fetchContestants() {
       try {
-        const res = await fetch(`${backendUrl}/api/contestants`);
+        const res = await fetch(API_URL);
         const data = await res.json();
-        populateTable(data);
+        contestants = data.reverse(); // newest first
+        renderTable();
+        renderPagination();
       } catch (err) {
-        alert('Failed to load contestants.');
+        console.error("Failed to fetch contestants:", err);
       }
     }
 
-    function populateTable(contestants) {
-      const tbody = document.querySelector('#contestantTable tbody');
-      tbody.innerHTML = '';
+    function renderTable() {
+      const tbody = document.querySelector("#contestantTable tbody");
+      const searchQuery = document.getElementById("searchInput").value.toLowerCase();
 
-      contestants.forEach(contestant => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${contestant.username}</td>
-          <td>${contestant.phone}</td>
-          <td>${new Date(contestant.createdAt).toLocaleString()}</td>
-          <td><button class="delete-btn" onclick="confirmDelete('${contestant._id}')">Delete</button></td>
-        `;
-        tbody.appendChild(tr);
-      });
+      const filtered = contestants.filter(c =>
+        c.username.toLowerCase().includes(searchQuery) ||
+        c.phone.toLowerCase().includes(searchQuery)
+      );
+
+      const start = (currentPage - 1) * itemsPerPage;
+      const paginated = filtered.slice(start, start + itemsPerPage);
+
+      tbody.innerHTML = paginated.map(c => `
+        <tr>
+          <td>${c.username}</td>
+          <td>${c.phone}</td>
+          <td>${new Date(c.createdAt || c.date).toLocaleDateString()}</td>
+          <td><button class="delete-btn" onclick="confirmDelete('${c._id}')">Delete</button></td>
+        </tr>
+      `).join('');
     }
 
-    function confirmDelete(id) {
-      if (confirm('Are you sure you want to delete this contestant?')) {
-        deleteContestant(id);
+    function renderPagination() {
+      const pagination = document.getElementById("pagination");
+      const searchQuery = document.getElementById("searchInput").value.toLowerCase();
+      const filtered = contestants.filter(c =>
+        c.username.toLowerCase().includes(searchQuery) ||
+        c.phone.toLowerCase().includes(searchQuery)
+      );
+      const totalPages = Math.ceil(filtered.length / itemsPerPage);
+
+      pagination.innerHTML = '';
+      for (let i = 1; i <= totalPages; i++) {
+        pagination.innerHTML += `<button class="${i === currentPage ? 'active' : ''}" onclick="goToPage(${i})">${i}</button>`;
       }
     }
 
-    async function deleteContestant(id) {
-      try {
-        const res = await fetch(`${backendUrl}/api/contestants/${id}`, {
-          method: 'DELETE',
-        });
-        const result = await res.json();
-        if (result.success) {
-          fetchContestants(); // Refresh list
-        } else {
-          alert('Failed to delete.');
+    function goToPage(page) {
+      currentPage = page;
+      renderTable();
+      renderPagination();
+    }
+
+    async function confirmDelete(id) {
+      if (confirm("Are you sure you want to delete this contestant?")) {
+        try {
+          await fetch(\`\${API_URL}/\${id}\`, { method: "DELETE" });
+          contestants = contestants.filter(c => c._id !== id);
+          renderTable();
+          renderPagination();
+        } catch (err) {
+          alert("Error deleting contestant.");
         }
-      } catch (err) {
-        alert('Error deleting contestant.');
       }
     }
-
-    // Search functionality
-    document.getElementById('searchInput').addEventListener('input', function () {
-      const searchText = this.value.toLowerCase();
-      const rows = document.querySelectorAll('#contestantTable tbody tr');
-
-      rows.forEach(row => {
-        const username = row.children[0].textContent.toLowerCase();
-        const phone = row.children[1].textContent.toLowerCase();
-        row.style.display = (username.includes(searchText) || phone.includes(searchText)) ? '' : 'none';
-      });
-    });
 
     fetchContestants();
   </script>
