--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,162 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Contesto Admin Dashboard</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Dashboard</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #0d47a1, #42a5f5); /* smooth blue gradient */
-      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #0044cc, #00c2ff);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 20px;
+      min-height: 100vh;
+      color: white;
     }
+
     h1 {
-      text-align: center;
-    }
-    .search-container {
-      text-align: center;
+      color: #fff000;
       margin-bottom: 20px;
     }
-    .search-container input {
-      padding: 8px;
-      width: 300px;
-      max-width: 80%;
+
+    .search-bar {
+      margin-bottom: 20px;
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .search-bar input {
+      width: 100%;
+      padding: 10px 15px;
+      border-radius: 20px;
+      border: none;
       font-size: 16px;
     }
+
     table {
       width: 100%;
+      max-width: 900px;
       border-collapse: collapse;
-      margin-bottom: 20px;
-      background: rgba(255, 255, 255, 0.1);
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    }
-    th {
       background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
     }
-    .pagination {
-      text-align: center;
+
+    th, td {
+      padding: 15px;
+      text-align: left;
     }
-    .pagination button {
-      padding: 8px 12px;
-      margin: 0 5px;
-      font-size: 14px;
-      cursor: pointer;
-      border: none;
-      background: #ffffff33;
-      color: white;
+
+    th {
+      background-color: #003399;
+      color: #fff000;
     }
-    .pagination button.active {
-      font-weight: bold;
-      background: #ffffff55;
+
+    tr:nth-child(even) {
+      background-color: rgba(255, 255, 255, 0.05);
     }
+
     .delete-btn {
-      background: red;
+      background-color: #ff4444;
       color: white;
       border: none;
-      padding: 6px 10px;
+      padding: 8px 14px;
+      border-radius: 20px;
       cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .delete-btn:hover {
+      background-color: #cc0000;
+    }
+
+    .pagination {
+      margin-top: 20px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .pagination button {
+      padding: 8px 14px;
+      border: none;
+      border-radius: 20px;
+      background-color: #fff000;
+      color: #003399;
+      cursor: pointer;
+    }
+
+    .pagination button.active {
+      background-color: #003399;
+      color: white;
+    }
+
+    .pagination button:hover {
+      opacity: 0.85;
     }
   </style>
 </head>
 <body>
-  <h1>Contesto Contestants</h1>
+  <h1>Registered Contestants</h1>
 
-  <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Search by username or phone..." onkeyup="renderTable()">
+  <div class="search-bar">
+    <input type="text" id="searchInput" placeholder="Search by username or phone number">
   </div>
 
-  <table id="contestantTable">
+  <table>
     <thead>
       <tr>
         <th>Username</th>
-        <th>Phone</th>
+        <th>Phone Number</th>
         <th>Date Registered</th>
         <th>Action</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody id="contestantTable">
+      <!-- Filled by JS -->
+    </tbody>
   </table>
 
   <div class="pagination" id="pagination"></div>
 
   <script>
-    const API_URL = "https://contesto.onrender.com/api/contestants"; // Adjust to actual endpoint if needed
+    const API_URL = 'https://contesto.onrender.com/api/contestants';
+    const tableBody = document.getElementById('contestantTable');
+    const searchInput = document.getElementById('searchInput');
+    const pagination = document.getElementById('pagination');
+
     let contestants = [];
-    const itemsPerPage = 12;
+    let filtered = [];
     let currentPage = 1;
+    const rowsPerPage = 12;
 
     async function fetchContestants() {
       try {
         const res = await fetch(API_URL);
         const data = await res.json();
-        contestants = data.reverse(); // newest first
+        contestants = data;
+        filtered = contestants;
         renderTable();
         renderPagination();
-      } catch (err) {
-        console.error("Failed to fetch contestants:", err);
+      } catch (error) {
+        alert('Failed to fetch contestants.');
       }
     }
 
     function renderTable() {
-      const tbody = document.querySelector("#contestantTable tbody");
-      const searchQuery = document.getElementById("searchInput").value.toLowerCase();
+      const start = (currentPage - 1) * rowsPerPage;
+      const end = start + rowsPerPage;
+      const current = filtered.slice(start, end);
 
-      const filtered = contestants.filter(c =>
-        c.username.toLowerCase().includes(searchQuery) ||
-        c.phone.toLowerCase().includes(searchQuery)
-      );
-
-      const start = (currentPage - 1) * itemsPerPage;
-      const paginated = filtered.slice(start, start + itemsPerPage);
-
-      tbody.innerHTML = paginated.map(c => `
+      tableBody.innerHTML = current.map(contestant => `
         <tr>
-          <td>${c.username}</td>
-          <td>${c.phone}</td>
-          <td>${new Date(c.createdAt || c.date).toLocaleDateString()}</td>
-          <td><button class="delete-btn" onclick="confirmDelete('${c._id}')">Delete</button></td>
+          <td>${contestant.username || '—'}</td>
+          <td>${contestant.phone || '—'}</td>
+          <td>${new Date(contestant.createdAt).toLocaleString()}</td>
+          <td><button class="delete-btn" onclick="deleteContestant('${contestant._id}')">Delete</button></td>
         </tr>
       `).join('');
     }
 
     function renderPagination() {
-      const pagination = document.getElementById("pagination");
-      const searchQuery = document.getElementById("searchInput").value.toLowerCase();
-      const filtered = contestants.filter(c =>
-        c.username.toLowerCase().includes(searchQuery) ||
-        c.phone.toLowerCase().includes(searchQuery)
-      );
-      const totalPages = Math.ceil(filtered.length / itemsPerPage);
-
       pagination.innerHTML = '';
-      for (let i = 1; i <= totalPages; i++) {
-        pagination.innerHTML += `<button class="${i === currentPage ? 'active' : ''}" onclick="goToPage(${i})">${i}</button>`;
-      }
-    }
-
-    function goToPage(page) {
-      currentPage = page;
-      renderTable();
-      renderPagination();
-    }
-
-    async function confirmDelete(id) {
-      if (confirm("Are you sure you want to delete this contestant?")) {
-        try {
-          await fetch(\`\${API_URL}/\${id}\`, { method: "DELETE" });
-          contestants = contestants.filter(c => c._id !== id);
+      const pageCount = Math.ceil(filtered.length / rowsPerPage);
+      for (let i = 1; i <= pageCount; i++) {
+        const btn = document.createElement('button');
+        btn.textContent = i;
+        if (i === currentPage) btn.classList.add('active');
+        btn.onclick = () => {
+          currentPage = i;
           renderTable();
           renderPagination();
-        } catch (err) {
-          alert("Error deleting contestant.");
-        }
+        };
+        pagination.appendChild(btn);
       }
     }
+
+    async function deleteContestant(id) {
+      const confirmed = confirm("Are you sure you want to delete this contestant?");
+      if (!confirmed) return;
+
+      try {
+        const res = await fetch(\`\${API_URL}/\${id}\`, { method: 'DELETE' });
+        if (!res.ok) throw new Error();
+
+        // Remove from the local array
+        contestants = contestants.filter(c => c._id !== id);
+        filtered = contestants;
+        renderTable();
+        renderPagination();
+      } catch {
+        alert('Deletion failed.');
+      }
+    }
+
+    searchInput.addEventListener('input', e => {
+      const term = e.target.value.toLowerCase();
+      filtered = contestants.filter(c =>
+        (c.username && c.username.toLowerCase().includes(term)) ||
+        (c.phone && c.phone.toLowerCase().includes(term))
+      );
+      currentPage = 1;
+      renderTable();
+      renderPagination();
+    });
 
     fetchContestants();
   </script>
